# sudoku-variants

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: rust.yml
benchdata/: adjacent-consecutive.json  adjacent-consecutive.toml  default.json  default.toml  diagonals-old.toml  diagonals.json  diagonals.toml  killer.json  kings-move.json  kings-move.toml  knights-move.json  knights-move.toml  sources.txt  thermo.json
benches/: benchmark.rs
src/: constraint.rs  error.rs  fix_tests.rs  generator.rs  lib.rs  random_tests.rs  solver.rs  util.rs
src/constraint/: composite.rs  irreducible.rs  mod.rs
src/constraint/reducible/: killer.rs  mod.rs  sandwich.rs  thermo.rs
src/solver/: mod.rs  strategy.rs
src/solver/strategy/: general.rs  impls.rs  mod.rs  solvers.rs
src/solver/strategy/specific/: killer.rs  mod.rs  sandwich.rs  sum.rs  thermo.rs
