[package]
name = "sudoku-variants"
version = "0.1.0"
authors = ["florian1345 <florian1345@gmx.de>"]
edition = "2018"
description = "A flexible Sudoku engine that supports common variations and custom rules."
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"

[profile.test]
opt-level = 2

[profile.release]
lto = true
opt-level = 3
