[package]
name = "sudoku-variants"
version = "0.2.0"
authors = ["florian1345 <florian1345@gmx.de>"]
edition = "2018"
description = "A flexible Sudoku engine that supports common variations and custom rules."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/florian1345/sudoku-variants"
documentation = "https://docs.rs/sudoku-variants/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
rand_chacha = "0.3"
serde_json = "1.0"

[[bench]]
name = "benchmark"
harness = false

[profile.test]
opt-level = 2

[profile.release]
lto = true
opt-level = 3

[profile.bench]
lto = true
opt-level = 3
